Enhancements/build on open shift (#22)
* changing Jenkinsfile to work with OpenShift Jenkins instance

* copy/pasta error

* moves build process from internal Jenkins to OpenShift Jenkins

* removing Jenkinsfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: node_js
 sudo: required
 node_js:
-  - stable
+- stable
 install:
-  - npm ci
+- npm ci
 script:
-  - npm run verify
+- npm run verify
 after_success:
 - .travis/after_success.sh
 env:
-  global:
-  - REPO="git@github.com:RedHatInsights/insights-chrome-build"
+    global:
+    - REPO="git@github.com:RedHatInsights/insights-chrome-build"
+    - REPO_DIR="insights-chrome-build"
