--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "font-awesome": "^4.7.0",
+    "jwt-redhat": "git+https://github.com/RedHatInsights/jwt-redhat.git#build0.1.0.insights",
     "lodash": "^4.17.10",
     "redux": "^4.0.0"
   },
